<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="16dp">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TableLayout
                android:id="@+id/Form"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:stretchColumns="2">

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/DateString"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date_string"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/DateTextField"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_span="2"
                        android:clickable="true"
                        android:focusable="true"
                        android:inputType="date" />
                </TableRow>

                <TableRow>

                    <EditText
                        android:id="@+id/StartTimeTextField"
                        android:layout_width="100dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:inputType="time" />

                    <TextView
                        android:id="@+id/DashString"
                        android:layout_gravity="center"
                        android:text="@string/time_separator"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/EndTimeTextField"
                        android:layout_width="100dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:inputType="time" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/IntensityLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/intensity_string"
                        android:textSize="16sp" />

                    <SeekBar
                        android:id="@+id/IntensityBar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_span="2"
                        android:max="4"
                        android:theme="@style/Base.Widget.AppCompat.SeekBar.Discrete" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/IntensityScaleLabel1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:text="@string/intensity1"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/IntensityScaleLabel2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="2"
                        android:layout_gravity="end"
                        android:text="@string/intensity2"
                        android:textSize="16sp" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/SideLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/side_string"
                        android:textSize="16sp" />

                    <Spinner
                        android:id="@+id/SideSpinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_span="2" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/TypeLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/type_string"
                        android:textSize="16sp" />

                    <Spinner
                        android:id="@+id/TypeSpinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_span="2" />
                </TableRow>

                <TableRow>

                    <EditText
                        android:id="@+id/TriggersField"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_span="3"
                        android:hint="@string/triggers_hint"
                        android:inputType="textMultiLine"
                        android:lines="3" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/CounterMeasureLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_span="2"
                        android:text="@string/countermeasure_string"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/CounterMeasureAddBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="2"
                        android:text="@string/countermeasure_button" />
                </TableRow>

                <TableRow>

                    <TableLayout
                        android:id="@+id/CounterMeasureList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:layout_span="2"></TableLayout>
                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/SideEffectLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/side_effect_string"
                        android:textSize="16sp" />

                    <Spinner
                        android:id="@+id/SideEffectSpinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_span="2" />
                </TableRow>
            </TableLayout>

            <Button
                android:id="@+id/SaveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Form"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:text="Save" />
        </RelativeLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>